--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>電子レンジ加熱時間換算ツール</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <main class="app">
