Refactor app architecture and build helpers

--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,7 @@
 
             <section class="source-power">
               <div class="preset-buttons" role="group" aria-label="プリセットワット数">
-                <button type="button" class="preset-button" data-power="1500">1500W</button>
-                <button type="button" class="preset-button" data-power="700">700W</button>
-                <button type="button" class="preset-button" data-power="600">600W</button>
-                <button type="button" class="preset-button" data-power="500">500W</button>
+                <!-- JavaScriptでプリセットボタンを生成 -->
               </div>
               <label class="manual-input">
                 <span class="manual-input__label">その他のワット数</span>
