Configure GA secret for deployment workflow

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title data-locale-key="document.title"></title>
+    <!-- GOOGLE_ANALYTICS_START -->
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-15P0WRS0D2"
+      src="https://www.googletagmanager.com/gtag/js?id=__GA_MEASUREMENT_ID__"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -16,8 +17,9 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-15P0WRS0D2");
+      gtag("config", "__GA_MEASUREMENT_ID__");
     </script>
+    <!-- GOOGLE_ANALYTICS_END -->
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
